로그스태시 적용을 위해 파일 수정 및 삭제